[package]
name = "jetro-experimental"
version = "0.1.0"
edition = "2021"
authors = ["Milad (Mike) Taghavi <mitghi.at.me.com>"]

[dependencies]
croaring = "2"
memchr = "2"
fast-float = { version = "0.2", optional = true }
aho-corasick = { version = "1", optional = true }
simdutf8 = { version = "0.1", optional = true }

[features]
default = []
fast-numbers = ["dep:fast-float"]
multi-key = ["dep:aho-corasick"]
validate-utf8 = ["dep:simdutf8"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
serde_json = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
